--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -15,6 +15,14 @@
 .mask_card_header {
   height: 100px;
 }
+.main_home_background{
+  width:99.8%;
+  height:410px;
+  overflow:hidden;
+  border:1px solid white;
+  background: url(/assets/homeBackground3.jpg) center center;
+  background-size: 100% 100%;
+}
 .card_filter_wrapper_header {
   height: 300px;
   width: 1280px;
@@ -189,4 +197,89 @@
   padding: 10px;
   cursor: pointer;
   margin: 10px;
+}
+.card_promotion_image_1{
+  width:600px;
+  height:200px;
+  background: url(/assets/animePromoton.jpg);
+  background-size: 100% 100%;
+}
+.card_promotion_image_2{
+  background: url(/assets/mayPromotion.jpg);
+  width:600px;
+  height:200px;
+  background-size: 100% 100%;
+}
+
+
+@media only screen and (max-width: 1440px) {
+  .konLogo  {
+    display: none !important;
+  }
+}
+@media only screen and (max-width: 1100px){
+  .card_promotion_wrapper{
+    display: grid !important;
+    grid-template-columns: 1fr ;
+    grid-gap: 20px;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 80px;
+  }
+  .konLogo {
+    display: none !important;
+  }
+  .card_header_top{
+    height:auto !important;
+    padding-bottom: 100px
+  }
+}
+@media only screen and (max-width: 900px){
+  .main_home_background {
+    background: url(/assets/bleachBackground.png) center center no-repeat;
+    background-size: 100% 100%;
+  }
+}
+@media only screen and (max-width: 640px){
+  .card_promotion_image_2{
+    width:500px;
+    height:200px;
+  }
+  .card_promotion_image_1{
+    width:500px;
+    height:200px;
+  }
+}
+@media only screen and (max-width: 500px){
+  .card_promotion_image_2{
+    width:400px;
+    height:200px;
+  }
+  .card_promotion_image_1{
+    width:400px;
+    height:200px;
+  }
+  .main_home_background {
+    height: 300px;
+  }
+}
+@media only screen and (max-width: 400px){
+  .card_promotion_image_2{
+    width:300px;
+    height:150px;
+  }
+  .card_promotion_image_1{
+    width:300px;
+    height:150px;
+  }
+  .card_header_top{
+    height: 1250px !important;
+  }
+  .card_promotion_wrapper{
+    margin-top: 50px;
+  }
+  .main_home_background {
+    height: 250px;
+  }
 }
