--- a/src/Home/Home_Filter.css
+++ b/src/Home/Home_Filter.css
@@ -1,66 +1,205 @@
-
-.mask_card_filter{
-    height: 100px;
+.card_filter {
+  width: 1280px;
+  margin: 0 auto;
+  padding: 0;
 }
-.card_filter_wrapper{
+.mask_card_filter {
+  height: 100px;
+}
+.card_filter_wrapper {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  background: url(/assets/blueMetal.jpg) center center;
+  background-size: 100%;
+  padding: 20px;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  border-radius: 0 0 5px 5px;
+}
+.card_filter_search {
+  width: 100%;
+  height: 350px;
+  background: rgb(255, 255, 255, 0.7);
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+}
+.card_filter_form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card_filter_input {
+  width: 400px;
+  height: 50px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  padding-left: 10px;
+  font-size: 20px;
+  margin-right: 20px;
+  transition: 1s;
+  z-index: 10;
+  font-family: cursive;
+  color: dodgerblue;
+  text-shadow: 1px 1px 2px black, 0 0 1px blue, 0 0 0.2px blue;
+}
+.card_filter_input:focus {
+  box-shadow: 0px 0px 33px 13px rgba(56, 150, 222, 1);
+}
+.card_filter_button {
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  background: url(/assets/blueMetal.jpg) center center;
+  height: 50px;
+  width: 100px;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 1s;
+  z-index: 10;
+}
+.favorite_button {
+  background: dodgerBlue;
+  width: 120px;
+  height: 45px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  z-index: 2;
+  color: white;
+}
+.first_card_filter {
+  margin: 10px;
+}
+.second_card_filter {
+  margin: 10px;
+}
+.third_card_filter {
+  margin: 10px;
+}
+.card_filter_search_image_1 {
+  width: 400px;
+  height: 400px;
+  position: relative;
+}
+.card_filter_search_image_2 {
+  width: 400px;
+  height: 400px;
+  position: relative;
+}
+.search_filter_wrapper{
+  display: none;
+}
+.search_form_wrapper{
+  margin-top:50px;
+  color:steelblue;
+  z-index:100;
+  position: relative;
+}
+.search_filter_description{
+  font-weight:bold;
+  z-index:10;
+  font-size:16px;
+  color:black;
+  z-index:100;
+  margin: 10px;
+}
+@media only screen and (max-width: 1280px) {
+  .card_filter_search {
+    width: auto;
+  }
+  .card_filter_wrapper {
+    width: auto;
+    height: auto;
+    position: relative;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .card_filter {
+    width: auto;
+    height: auto;
+  }
+  .favorite_button {
+    margin: 20px;
+  }
+  .card_filter_wrapper span {
+    display: none;
+  }
+}
+@media only screen and (max-width: 960px) {
+  .card_filter_search {
+    width:auto;
+    flex-wrap: wrap;
+  }
+  .card_filter {
+    width: auto;
+    height: auto;
+  }
+  .card_filter_search_image_1 {
+    display: none;
+  }
+  .card_filter_search_image_2 {
+    display: none;
+  }
+  .search_filter_wrapper{
     display: flex;
-    background: url(/assets/blueMetal.jpg) center  center;
-    background-size:1278px;
-    padding: 20px;
-    display: flex;
-    color:white;
-    justify-content:space-between;
-    align-items: center;
-    font-size: 24px;
-    border-radius: 0 0 5px 5px;
-}
-.card_filter{
-    width: 1280px;
-    margin: 0 auto;
-}
-.card_filter_search{
-    width:100%;
-    height:350px;
-    margin:0px auto;
-    background:rgb(255,255,255,.7);
-    position:relative;
-    display: flex;
-    justify-content: space-around;
-    
-}
-.card_filter_form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.card_filter_input{
-    width: 400px;
-    height: 50px;
-    border-radius: 5px;
-    outline: none;
-    border: none;
-    padding-left: 10px;
-    font-size: 20px;
-    margin-right: 20px;
-    transition: 1s;
-    z-index: 10;
-    font-family: cursive;
-    color: dodgerblue;
-    text-shadow: 1px 1px 2px black, 0 0 1px blue, 0 0 0.2px blue;
-}
-.card_filter_input:focus{
-    box-shadow: 0px 0px 33px 13px rgba(56,150,222,1);
-}
-.card_filter_button{
-    border: none;
-    border-radius: 5px;
-    outline: none;
-    background: url(/assets/blueMetal.jpg) center center;
-    height: 50px;
-    width: 100px;
+    flex-wrap: wrap;
+    top: -400px;
+    left: 0px;
+    position: absolute !important;
+    width: 100%;
+    height: 800px;
+    background: url(/assets/whiteIchigo.png) center center;
+    background-size: 100% 100%;
+  }
+  .card_filter_wrapper span {
+    position: absolute;
+    left: 50px;
+    top: 100px;
+  }
+  .search_filter_description{
     color: white;
-    font-weight: bold;
-    cursor: pointer;
-    transition: 1s;
-    z-index: 10;
+    width: 120px;
+    padding:2px;
+    margin: 30px auto;
+    border-radius: 20px;
+    background: black;
+}
+  .card_filter_form{
+    margin-top: 80px
+  }
+  .search_form_wrapper p{
+    font-size: 40px !important;
+    color: white;
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    background:url(/assets/blueMetal.jpg);
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 50px;
+    transform: translate(-50%)
+  }
+}
+@media only screen and (max-width: 866px) {
+  .favorite_button {
+    width: 250px;
+    padding: 0;
+    margin: 10px;
+  }
+}
+@media only screen and (max-width: 600px){
+  .card_filter_search input{
+    width: 300px
+  }
 }
