--- a/src/Home/Home_Filter.css
+++ b/src/Home/Home_Filter.css
@@ -197,9 +197,41 @@
     padding: 0;
     margin: 10px;
   }
+  .card_wrapper{
+    width: auto;
+  }
 }
-@media only screen and (max-width: 600px){
-  .card_filter_search input{
-    width: 300px
+@media only screen and (max-width: 400px){
+  .card_filter_input{
+    width: 250px;
+    height: 40px;
+    margin: 20px;
+    font-size: 16px;
+  }
+  .card_filter_button{
+    width: 60px;
+    height: 30px;
+  }
+  .card_filter_form{
+    display: flex;
+    flex-direction: column;
+    margin-top: 150px;
+  }
+  .search_filter_description_wrapper{
+    display: none;
+  }
+  .search_form_title p{
+    font-size: 25px !important;
+  }
+  .search_filter_wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    top: -250px;
+    left: 0px;
+    position: absolute !important;
+    width: 100%;
+    height: 600px;
+    background: url(/assets/whiteIchigo.png) center center;
+    background-size: 100% 100%;
   }
 }
