--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -226,7 +226,7 @@
 .card_image_back_favorite {
   width: 0px;
   height: 60px;
-  background: mediumpurple;
+  background: crimson;
   position: absolute;
   left: 0;
   top: 65px;
